--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
 
     <div>
       <h1 class="game-title">
-        
+        Guess a number between 1 & 10
       </h1>
+      <div class="game-number">?</div>
+      <span class="game-feedback">
+        What is your guess?
+      </span>
     </div>
 
   </div>
