--- a/index.html
+++ b/index.html
@@ -26,6 +26,11 @@
       </span>
     </div>
 
+    <footer>
+      <input type="number" class="game-guess">
+      <button type="button" class="game-button game-button-play">Play</button>
+    </footer>
+
   </div>
 
   <script src="script.js"></script>
