--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <footer>
       <input type="number" class="game-guess">
       <button type="button" class="game-button game-button-play">Play</button>
+      <button type="button" class="game-button game-button-reset">Reset</button>
     </footer>
 
   </div>
